--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,12 @@ dependencies:
   google_fonts: ^1.1.0
   flutter_web_auth: ^0.2.4
   get: ^3.0.1
-  graphql_flutter: ^3.0.1
   dio: ^3.0.9
   shared_preferences: ^0.5.7+3
   flutter_icons: ^1.1.0
   clippy_flutter: ^1.1.1
+  cached_network_image: ^2.2.0+1
+  dio_http_cache: ^0.2.7
 
 dev_dependencies:
   flutter_test:
