--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_icons: ^1.1.0
   clippy_flutter: ^1.1.1
   cached_network_image: ^2.2.0+1
+  animated_text_kit: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,16 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/fonts/
+    - assets/images/
+  fonts:
+    - family: Blanka
+      fonts:
+        - asset: assets/fonts/Blanka.otf
+    - family: Riviera
+      fonts:
+        - asset: assets/fonts/Riviera.otf
+    - family: Ultra
+      fonts:
+        - asset: assets/fonts/Ultra.otf
