--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   clippy_flutter: ^1.1.1
   cached_network_image: ^2.2.0+1
   animated_text_kit: ^2.2.0
+  percent_indicator: ^2.1.5
+  fl_chart: ^0.10.0
 
 dev_dependencies:
   flutter_test:
