--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,16 @@ dependencies:
   animated_text_kit: ^2.2.0
   percent_indicator: ^2.1.5
   fl_chart: ^0.10.0
+  share: ^0.6.4+3
+  screenshot: ^0.2.0
+  animations: ^1.1.1
+  image_picker: ^0.6.7+2
+  image: ^2.1.13
+  photo_view: ^0.9.2
+  cloudinary_public: ^0.3.3
+  permission_handler: ^5.0.1+1
+  image_gallery_saver: ^1.5.0
+  url_launcher: ^5.4.11
 
 dev_dependencies:
   flutter_test:
