[Build] Prepare for release

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: Flunk
-description: A new Flutter project.
+description: Analyze you GitHub profile in a cyberpunk way
 publish_to: "none"
 version: 1.0.0+1
 
