--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,4 @@ app.*.map.json
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
-android/app/key.properties
+**/key.properties
